syntax = "proto3";

option go_package = "github.com/kmp091/dynago/messages";

import "google/protobuf/any.proto";

package dynago;

message DynagoRequest {
    map<string, google.protobuf.Any> Parameters = 1;
}

message DynagoResponse {
    map<string, google.protobuf.Any> Results = 1;
}

//could be a streaming version rather than a batched list version?
service DynagoService {
    rpc Process (DynagoRequest) returns (DynagoResponse);
}